# poly-weather

./: .env.example  .gitignore  .ralph-iteration-log.md  RALPH-PROMPT.md  README.md  e2e_results.json  main.py  pyproject.toml
.playwright-mcp/: page-2026-04-16T01-42-59-983Z.yml  page-2026-04-16T10-36-33-498Z.yml  page-2026-04-16T10-36-49-888Z.yml
docs/: pre_registration.md
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
results/: e2e_run_20260416_013720_baseline.json  e2e_run_20260416_102758_iter2.json  e2e_run_20260416_105351_post_fixes.json  e2e_run_20260416_110700_v2_selective.json  e2e_run_20260416_110813_loop1.json  e2e_run_20260416_112406_v3_diversified.json  e2e_run_20260418_063438_run2.json  performance_20260418.json  performance_20260419.json
scripts/: check_resolution.py  e2e_analysis.py
src/api/: event_bus.py  main.py
src/config/: settings.py  stations.py
src/data/: models.py  polymarket_client.py  weather_client.py  ws_feed.py
src/db/: __init__.py  repository.py  schema.sql
src/orchestrator/: __init__.py  data_collector.py  pipeline.py  price_monitor.py  scheduler.py  signal_cache.py
src/prediction/: calibration.py  probability_engine.py  realtime_updater.py  regime_classifier.py
src/trading/: edge_detector.py  executor.py  exposure_tracker.py  position_sizer.py
src/verification/: hypothesis_tester.py  paper_trader.py  prediction_log.py  resolution_checker.py
supabase/: config.toml
tests/integration/: test_price_monitor_flow.py  test_resolution_e2e.py
tests/unit/: test_api.py  test_calibration.py  (+18 more)
(+16 files in other folders)
